8232860: Error formatting integer values with MessageFormat.format() using HOST provider

Reviewed-by: rriggs